# hair-salon-chatbot-AI

./: .gitignore  README.md  main.py  pyproject.toml
backend/: .env  create_admin.py
backend/app/: database.py  main.py  models.py  schemas.py  security.py
backend/app/chat/: booking_service.py  chat_service.py  schemas.py
backend/app/routers/: auth.py  bookings.py  chat.py  hairdressers.py  services.py
frontend/: admin.html  index.html
frontend/css/: admin.css  style.css
frontend/js/: admin.js  booking.js  chatbot.js  config.js  validation.js
